--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "firebase": "^5.5.0",
+    "lodash": "^4.17.11",
     "re-base": "^4.0.0",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
